# pan-ansible-AWX

./: .gitignore  README.md  pyproject.toml  tasks.py
ansible/DT_AWX/AWX_PANOS/: pan_API_Key
ansible/config_examples/: DT_AWX_PAN_Object
ansible/config_examples/dhcp_reservation/: README.md  alternative.yaml  inventory.yaml  playbook.yaml
ansible/config_examples/generate_and_load/: README.md
ansible/config_examples/ipsec_vpn/: README.md  inventory.yaml  ipsec.yml
ansible/config_examples/nautobot_integration/: README.md  alternative_method.yaml  inventory.yaml  playbook.yaml
ansible/config_examples/security_object/: README.md  inventory.yaml  playbook.yaml  playbookV2.yml  playbookv3.yml  plybookV4  plybookV4.yml  (+1 more)
ansible/configure_from_nautobot/: configure_with_nautobot.yaml
ansible/create_dhcp_reservation_panorama/: playbook.yaml
ansible/create_hundreds_of_security_policies_panos/: playbook.yaml  policy.yml  pseudo.py  security_profile_group.yaml  unique.py
ansible/create_security_object_panorama/: playbook.yaml
ansible/create_security_policy_panorama/: playbook.yaml
ansible/csv_report_of_profile_groups/: ansible.cfg  security_profile_group.yaml
ansible/retrieve_ethernet_interfaces/: inventory.yaml
ansible/security_rule_export/: README.md  security_rule_export.yaml
ansible/sip_alg_disable/: sip.yml
ansible/update_content_panorama/: playbook.yaml
docker/: Dockerfile  Dockerfile.arm  pyproject.toml  requirements.txt
docker/arm/: Dockerfile
docker/x86/: Dockerfile  requirements.txt
docs/: environment.md  howitworks.md  vault.md
(+33 files in other folders)
