[tool.poetry]
name = "pan-ansible-examples"
version = "0.1.0"
description = "Project to host Ansible configurations."
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^6.3.0"
pan-os-python = "^1.7.3"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
invoke = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
