[tool.poetry]
name = "pan-ansible-examples"
version = "0.2.0"
description = "GitHub repository for examples of using Ansible against Palo Alto Networks appliances"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "pan_ansible_examples"}]

[tool.poetry.dependencies]
python = "^3.11"
invoke = "^2.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
ipython = "^8.12.0"
ipdb = "^0.13.13"
distro = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
