[tool.poetry]
name = "pan-ansible-examples"
version = "0.1.0"
description = "Project to host Ansible configurations."
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^6.3.0"
pan-os-python = "^1.7.3"
xmltodict = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
